--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Online MP3 Podcast Chapter Editor</title>
+    <title>Rumusmusic Online MP3 Podcast Chapter Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6718454554209533"
+crossorigin="anonymous"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3599443066760004"
+crossorigin="anonymous"></script>
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     <link rel="stylesheet" href="libs/styles/bootstrap-and-vidstack.min.css" />
     <style>
         body {
@@ -561,7 +567,7 @@
                 |&nbsp;<a href="/player" class="text-dark-emphasis"
                     data-tippy-content="Desktop app for playing MP3 with chapters">Player</a>
             </span>
-            <a href="https://github.com/mp3chapters/mp3chapters.github.io" class="icon-link ms-auto">
+            <a href="https://github.com/rumusmusic/rumusmusic.github.io" class="icon-link ms-auto">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
                     viewBox="0 0 16 16" aria-hidden="true">
                     <path
@@ -1010,7 +1016,9 @@
             Drop an mp3 file to load.
         </div>
     </div>
-
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-9700222423349703">
+</amp-auto-ads>
     <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
         <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
             <div class="row">
@@ -1022,20 +1030,20 @@
                             <path fill-rule="evenodd"
                                 d="M0 .5A.5.5 0 0 1 .5 0h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 0 .5m4 0a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1h-10A.5.5 0 0 1 4 .5m-4 2A.5.5 0 0 1 .5 2h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m-4 2A.5.5 0 0 1 .5 4h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5m-4 2A.5.5 0 0 1 .5 6h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5m-4 2A.5.5 0 0 1 .5 8h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5m-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1h-10a.5.5 0 0 1-.5-.5m-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5m-4 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m4 0a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5" />
                         </svg>
-                        <span class="fs-5">Online MP3 Podcast Chapter Editor</span>
+                        <span class="fs-5">Rumusmusic Online MP3 Podcast Chapter</span>
                     </a>
                     <ul class="list-unstyled small">
-                        <li class="mb-2">Built by <a href="https://dominik-peters.de">Dominik Peters</a>, in the hope
+                        <li class="mb-2">Built by <a href="https://alhikmah.eu.org">Hikmah</a>, in the hope
                             that more podcasts will use chapters in the future.</li>
                         <li class="mb-2">Built using
-                            <a href="https://github.com/Zazama/node-id3">node-id3</a>,
-                            <a href="https://browserify.org/">browserify</a>,
-                            <a href="https://wavesurfer-js.org/">wavesurfer.js</a>, and
-                            <a href="https://vidstack.io/docs">Vidstack Player</a>.
+                            <a href="https://github.com/rumusmusic">node-id3</a>,
+                            <a href="https://rebanaclasic.biz.id/">rebanaclasic</a>,
+                            <a href="https://awdev.my.id">awdev</a>, and
+                            <a href="https://moveshq.github.io">movesHQ</a>.
                         </li>
-                        <li class="mb-2">Code licensed <a href="https://github.com/mp3chapters/mp3chapters.github.io/blob/master/LICENSE"
+                        <li class="mb-2">Code licensed <a href="https://github.com/rumusmusic/rumusmusic.github.io/blob/master/LICENSE"
                                 target="_blank" rel="license noopener">MIT</a>.
-                            Available on <a href="https://github.com/mp3chapters/mp3chapters.github.io">GitHub</a>,
+                            Available on <a href="https://github.com/rumusmusic/rumusmusic.github.io">GitHub</a>,
                             feedback welcome!</li>
                         <li class="mb-2">First published November 2023. Last updated November 2024.</li>
                     </ul>
@@ -1083,6 +1091,16 @@
 
         gtag('config', 'G-5B08GWJJCM');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9700222423349703"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-9700222423349703"
+     data-ad-slot="4232112838"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 
 </html>
