--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ crossorigin="anonymous"></script>
 <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
 </script>
+    <meta name="google-site-verification" content="ULcU2J0FjD0PK7t2pCYuQsoccQ8WPqrF4X1w9J0Rfr8" />
     <link rel="stylesheet" href="libs/styles/bootstrap-and-vidstack.min.css" />
     <style>
         body {
